--- a/Kassiopeia/CMakeLists.txt
+++ b/Kassiopeia/CMakeLists.txt
@@ -127,6 +127,7 @@ add_subdirectory( Navigators )
 add_subdirectory( Interactions )
 add_subdirectory( Terminators )
 add_subdirectory( Modifiers )
+add_subdirectory( Motions )
 add_subdirectory( Writers )
 add_subdirectory( Simulation )
 add_subdirectory( Readers )
